--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,15 @@
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jline.version>3.26.3</jline.version>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>${jline.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
